--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -764,14 +764,14 @@
    "id": "63d17f3b",
    "metadata": {},
    "source": [
-    "- **survived:** Somente aproximadamente 38,38% dos passageiros conseguiram sobreviver;\n",
-    "- **pclass:** A grande maioria dos passageiros era de terceira classe (aprox. 51,11%), representando mais que a soma entre passageiros da primeira (aprox. 24,24%) e segunda classe (aprox. 20,65%);\n",
-    "- **sex:** aprox. 64,76% dos passageiros eram do sexo masculino;\n",
-    "- **age:** A média para essa variável não é confiável. Ao menos 75% dos passageiros possuía entre 0,42 (5,04 meses) e 35 anos, enquanto o maior valor é 80, evidenciando uma discrepância crescente, que implica na média não confiável; \n",
-    "- **sibsp:** A média para essa variável não é confiável. Ao menos 75% dos passageiros possuía entre 0 e 1 esposo (a)/irmãos, enquanto o maior valor é 8, evidenciando uma discrepância crescente, que implica na média não confiável;\n",
-    "- **parch:** A média para essa variável não é confiável. Ao menos 75% dos passageiros possuía 0 pais/filhos, enquanto o maior valor é 6, evidenciando uma discrepância crescente, que implica na média não confiável;\n",
-    "- **fare:** A média para essa variável não é confiável. Ao menos 75% dos passageiros desembolsaram entre £ 0 e £ 31, enquanto o maior valor foi aproximadamente £ 512,33, evidenciando uma discrepância crescente extremamente alta no valor que alguns passageiros pagaram, que implica na média não confiável;\n",
-    "- **embarked:** A grande maioria (aprox. 72.50%) embarcaram no porto de Southampton."
+    "- **survived:** Only approximately 38.38% of passengers managed to survive;\n",
+    "- **pclass:** The vast majority of passengers were third class (approx. 51.11%), representing more than the sum of first class (approx. 24.24%) and second class (approx. 20.65%) passengers;\n",
+    "- **sex:** Approx. 64.76% of passengers were male;\n",
+    "- **age:** The average for this variable is unreliable. At least 75% of passengers were between 0.42 (5.04 months) and 35 years old, while the highest value is 80, showing a growing discrepancy, which implies an unreliable average;\n",
+    "- **sibsp:** The average for this variable is unreliable. At least 75% of passengers had between 0 and 1 spouse/siblings, while the highest value is 8, showing a growing discrepancy, which implies an unreliable average;\n",
+    "- **parch:** The average for this variable is unreliable. At least 75% of passengers had 0 parents/children, while the highest value is 6, showing a growing discrepancy, which implies an unreliable average;\n",
+    "- **fare:** The average for this variable is unreliable. At least 75% of passengers paid between £0 and £31, while the highest value was approximately £512.33, showing an extremely high growing discrepancy in the amount some passengers paid, which implies an unreliable average;\n",
+    "- **embarked:** The vast majority (approx. 72.50%) embarked at the port of Southampton."
    ]
   },
   {
@@ -790,7 +790,7 @@
    "id": "8b1b410a",
    "metadata": {},
    "source": [
-    "4. Mineração de dados"
+    "4. Data mining"
    ]
   },
   {
