--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -644,7 +644,7 @@
    "id": "56ca7f64",
    "metadata": {},
    "source": [
-    "Since the analysis seeks to determine the relationship between the columns and the target column that survived, it was prudent to leave out the outliers."
+    "I deemed the outliers relevant to the analysis, therefore I did not remove them."
    ]
   },
   {
