--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -1010,7 +1010,7 @@
     "  * **sex:** Being female was a fundamental factor for survival;\n",
     "  * **fare:** Everyone who paid more than £300 survived;\n",
     "  * **sibsp:** Having more than 4 siblings/spouse was decisive in making passengers victims;\n",
-    "  * **embarked:** The extra (multivariate) analysis of the embarkation location alone was not a decisive factor for survival, however the analysis showed that everyone who paid more than £300 embarked in Cherbourg and the vast majority who embarked in Southampton were third class;"
+    "  * **embarked:** The extra (multivariate) analysis of the embarkation location alone was not a decisive factor for survival, however the analysis showed that everyone who paid more than £300 embarked in Cherbourg and the vast majority who embarked in Southampton were third class."
    ]
   }
  ],
