--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -1016,7 +1016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv (3.13.12)",
    "language": "python",
    "name": "python3"
   },
@@ -1030,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
